@@ -12,18 +12,7 @@
         <item>
             <key> <string>_local_properties</string> </key>
             <value>
-              <tuple>
-                <dictionary>
-                  <item>
-                      <key> <string>id</string> </key>
-                      <value> <string>business_template_skin_layer_priority</string> </value>
-                  </item>
-                  <item>
-                      <key> <string>type</string> </key>
-                      <value> <string>float</string> </value>
-                  </item>
-                </dictionary>
-              </tuple>
+              <tuple/>
             </value>
         </item>
         <item>
@@ -31,10 +20,6 @@
             <value>
               <tuple/>
             </value>
-        </item>
-        <item>
-            <key> <string>business_template_skin_layer_priority</string> </key>
-            <value> <float>300.0</float> </value>
         </item>
         <item>
             <key> <string>id</string> </key>
